--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -13,9 +13,6 @@
   display: block;
 }
 
-select{
-  width: 300px;
-}
 
 .react-bar {
   position: absolute;
@@ -57,20 +54,43 @@ select{
   }
 }
 
+.indexBtn-2{
+  margin-right: 1rem;
+  margin-top: 6rem;
+  margin-bottom: 20px;
+  border: 2px;
+  text-align: center;
+  font-size: 1.5rem;
+  border-radius:0.25rem ;
+  display: block;
+  width: 50%;
+  background-color: #26bec9;
+  color: #fff;
+}
+
+@screen sm{
+  .indexBtn-2{
+    display: none;
+ }
+
+}
+
 .wrap{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
-.section{
+@screen sm{
+  .section{
   padding: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.text{
 }
+
+
 .feature-img{
   width: 50%;
 }
