--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,11 +7,11 @@
     </h1>
     <div class="w-full mt-3 sm:w-auto flex flex-col sm:flex-row items-center">
       <% if user_signed_in? %>
-        <span class="indexBtn"><%= link_to 'LAUNCH',workspaces_path,class:'block py-2 px-5'%></span>
+        <span class="indexBtn"><%= link_to 'LAUNCH',workspaces_path,class:'block px-5'%></span>
         <span class="indexBtn signoutBtn"><%= link_to 'SIGN OUT' ,destroy_user_session_path, class:'py-2 text-lg' %></span>
       <% else %>
         <span class="indexBtn signinBtn"><%= link_to 'SIGN IN' ,new_user_session_path, class:'py-2 text-lg' %></span>
-        <span class="indexBtn-2"><%= link_to 'GET STRATED',login_pages_path, class:'py-2 text-lg' %></span>
+        <span class="indexBtn-2"><%= link_to 'GET STRATED',login_pages_path, class:'py-2' %></span>
       <% end %>
     </div>
   </nav>
