--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -1,4 +1,4 @@
-<div class="chatroom flex" data-controller="uploadfile" >
+<div class="chatroom flex h-screen" data-controller="uploadfile" >
     <div class="leftbar flex flex-col">
       <%= render "./shared/leftbar", workspace: @workspace,   
                                      channels:  @channels,
