--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="absolute top-0 w-full z-10 text-white"><%= notice %></div>
+    <div class="absolute top-0 w-full z-10"><%= notice %></div>
     <%= yield %>
   </body>
 </html>
