--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,5 +1,5 @@
-<nav class="container mx-auto mt-4 py-4 flex items-center justify-center">
-    <h1 class="w-1/4">
+<nav class="container mx-auto py-4 flex items-center justify-center">
+    <h1 class="w-1/2 sm:w-200">
       <%= link_to image_pack_tag("media/images/Sladock_logo.png"),pages_path %>
     </h1>
 </nav>
