--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
  <%# nav導覽列 %>
 <div class="nav">
-  <nav class="container mx-auto py-4 flex items-center justify-center">
-    <h1 class="w-1/4">
+  <nav class="container mx-auto py-2 flex items-center justify-center">
+    <h1 class="w-1/2 sm:w-1/4">
       <%= link_to image_pack_tag("media/images/Sladock_logo.png"),pages_path %>
     </h1>
   </nav>
