--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,11 +1,11 @@
 <div class="bg-white">
   <nav class="py-4 border-b light-gray">
-    <h1 class="w-1/2 sm:w-1/6">
+    <h1 class="w-1/2 sm:w-200">
       <%= link_to image_pack_tag("media/images/Sladock_logo.png"),pages_path %>
     </h1>
   </nav>
 </div>
-  <div class="bg-divider">
+  <div class="bg-divider p-2 sm:p-0">
     <div class=" container mx-auto max-w-lg">
       <div class="join-ws py-8">
         <h3 class="font-bold text-2xl mb-3"><%= t(".your_workspaces") %></h3>
