--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <%= render './shared/nav' %>
 <div class="container mx-auto flex flex-col items-center text-center">
   <h2 class="text-3xl font-bold mb-2">First, enter your email</h2>
-  <p class="mb-5">We suggest using the <strong>email address you use at work.</strong></p>
+  <p class="mb-5">We suggest using <strong>your email address.</strong></p>
   <div class="sign_up max-w-sm">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -25,7 +25,7 @@
 
     <div class="field text-left">
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation,placeholder: "再輸入一次密碼", autocomplete: "new-password",class: "w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
+      <%= f.password_field :password_confirmation,placeholder: "Confirm your password", autocomplete: "new-password",class: "w-full py-2 px-2 mb-6 border border-gray-700 rounded focus:outline-none focus:shadow-outline" %>
     </div>
 
     <div class="field text-left">
