Delete background color of index imgage

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="section-img">
-        <%= link_to image_pack_tag("media/images/indexImg.jpg"),pages_path %>
+        <%= link_to image_pack_tag("media/images/indexImg.png"),pages_path %>
       </div>  
     </div>
   </div>
