刪除input預設樣式、indexBTN跑版

--- a/app/javascript/stylesheets/Frontend/draft.css
+++ b/app/javascript/stylesheets/Frontend/draft.css
@@ -2,3 +2,8 @@
   display: block;
 }
 
+input {
+  -webkit-appearance: none;  /* Safari 和 Chrome，常用於iOS下移除內建樣式 */
+  -moz-appearance: none;     /* FireFox */
+  appearance: none;
+}
