--- a/app/views/profiles/_edit.html.erb
+++ b/app/views/profiles/_edit.html.erb
@@ -1,4 +1,4 @@
-<div class="profile-background absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
+<div class="profile-background absolute w-full h-screen top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
   <div class="profile-form bg-white shadow-2xl w-10/12 md:w-5/12 h-11/12 rounded relative">
     <div class="flex justify-between items-center p-5">
       <h5 class="font-bold text-xl"><%= t('profiles.edit.title') %></h5>
